# SegFormer-with-RoPE

./: .cspell.json  .gitignore  .ruff.toml  NOTICE.md  README.md  pyproject.toml
src/colab/: Segformer-with-RoPE-b0-axial.ipynb  Segformer-with-RoPE-b0-mixed.ipynb
src/reference/rope_vit/: vit_rope.py
src/reference/transformers/segformer/: modeling_segformer.py
src/segformer_with_rope/: config.py  model.py
