[project]
name = "segformer-with-rope"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.2.0",
    "evaluate>=0.4.3",
    "icecream>=2.1.4",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.48.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "lefthook>=1.10.8",
    "mypy>=1.14.1",
    "ruff>=0.9.2",
]
